      
      \item (Windows) An experimental build of R based on \command{gcc}
      4.9.3 is now available on CRAN on the \file{bin/windows/base/rdevel.html}
      snapshot page.  This build will require recompilation of at least those 
      packages that include C++ code, and possibly others.  The CRAN 
      binary packages still use the older toolchain, so package installs
      default to \code{type = "source"}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The \command{make} macro \code{AWK} which used to be made
      available to files such as \file{src/Makefile} is no longer set.
      [Announced and will be implemented once packages are updated.]
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The API call \code{logspace_sum} introduced in \R 3.2.0 is
      now remapped as an entry point to \code{Rf_logspace_sum}, and its
      first argument has gained a \code{const} qualifier.

      Code using it will need to be reinstalled. (\PR{16470})

      \item \code{R_GE_version} has been increased to \code{11}.

      \item New API call \code{R_orderVector1()}, a faster
      one-argument version of \code{R_orderVector()}.

      \item When \R{} headers such as \file{R.h} and \file{Rmath.h} are
      called from C++ code in packages they include the C++ versions of
      system headers such as \file{<cmath>} rather than the legacy
      headers such as \file{<math.h>}.  (Headers \file{Rinternals.h} and
      \file{Rinterface.h} already did, and inclusion of system headers
      can still be circumvented by defining \code{NO_C_HEADERS},
      including as from this version for those two headers.)

      The manual has long said that \R{} headers should \bold{not} be
      included within an \code{extern "C"} block, and almost all the
      packages affected by this change are doing so.

      \item Including header \file{S.h} from C++ code will fail on some